AZ15122020|2:16PM All suite are working

--- a/pom.xml
+++ b/pom.xml
@@ -261,8 +261,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>15</release>
                     <encoding>UTF-8</encoding>
                     <maxmem>10240m</maxmem>
                     <meminitial>10240m</meminitial>
